GeneWeb version 2.08
--------------------

* GeneWeb Service/CGI (gwd)
  - [Oct 19, 99] Added treatment of png files.
  - [Oct 10, 99] In update form, when name conflict, added the birth and
    death date in the list of persons having the same name.
  - [Oct 8, 99] Added forum.
  - [Oct 5, 99] Fixed links problems in some pages from the DOC
    link (some problems found in the Swedish version).
  - [Oct 5, 99] Added displaying of number of persons in ascends (short
    display).
  - [Oct 4, 99] Fixed displaying bug in update history (spot displayed due
    to incorrect HTML).
  - [Oct 3, 99] Added week day in "calendars" page.

* GeneWeb uncompiler (gwu)
  - [Oct 10, 99] Fixed bug: dates represented as text where not extracted
    in the output file but on standard output.

* Gedcom to GeneWeb (ged2gwb)
  - [Oct 13, 99] Added option "-fne" (for "first names enclosed"): it is
    possible to give two characters telling that the usual first name parts
    is between those characters: e.g. if they are of the form:
       Bernard Jean "Philippe"
    use -fne '""' and if they are:
       Bernard Jean (Philippe)
    use -fne '()', and so on.

* GeneWeb to Gedcom (gwb2ged)
  - [Oct 5, 99] Changed the way the lines of notes are cut (by tag CONC).
    The standard GEDCOM 5.5 tells that too long lines must be cut *inside*
    words and not *between* words, to avoid starting or trailing spaces in
    CONC lines. Gwb2ged did not do that: it is fixed.
    To remain compatible with old GEDCOMS generated by GeneWeb, the ged2gwb
    program is not changed: in CONC lines, the possible starting space remains
    included in the note (what does not respect the standard, shame on
    me).

* Lexicon (lang/lexicon.txt)
  - [Oct 12, 99] Fixed and completed some Norwegian phrases (Brynjulf
    Langballe).
  - [Oct 4..10, 99] Fixed and completed some Dutch phrases (Joris Esch).
  - [Oct 4, 99] Fixed some German phrases (Falko Trojahn).

GeneWeb version 2.07
--------------------
